<resources>
    <string name="app_name">Coinz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Choose what to do</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="bank">Bank</string>
    <string name="coin_transfer">Coin Transfer</string>
    <string name="menu">Back to Login</string>

    <string name="LoginMsg">Please enter your login details</string>
    <string name="Sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>

    <string name="loading">Loading…</string>
    <string name="todayRates">Today\'s Exchange Rates: </string>
    <string name="switchReceived">Switch to Received Coins</string>
    <string name="switchCollected">Switch to Collected Coins</string>
    <string name="cashCoin">Cash out selected Coin</string>
    <string name="quid">QUID</string>
    <string name="dolr">DOLR</string>
    <string name="shil">SHIL</string>
    <string name="peny">PENY</string>

    <string name="coinReceive">Receive Coins</string>
    <string name="emailReceive">E-mail to receive coin</string>

    <string name="noice">Noice</string>
    <string name="cashMoney">Money: </string>
    <string name="totalCoins">Total Coins Collected: </string>
    <string name="totalDist">Total Distance Travelled: </string>
    <string name="stats">Statistics</string>

    <string name="access_token">pk.eyJ1IjoiYXNlbGlhIiwiYSI6ImNqcDJocHNpMzA2cTIzdmxrazgxZGhqZ3QifQ.AFaziWr-WEIO2wDcrN9e9Q</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
