<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
        <item
            android:id="@+id/Bank"
            android:icon="@drawable/ic_menu_bank"
            android:title="@string/bank" />
        <item
            android:id="@+id/Coin_Transfer"
            android:icon="@drawable/ic_menu_coin_transfer"
            android:title="@string/coin_transfer" />
        <!--
        <item
            android:id="@+id/Menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu"/> -->
    </group>

</menu>
