<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bank">


    <TextView
        android:id="@+id/textTitleRates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4sp"
        android:text="@string/todayRates"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textDOLRrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitleRates"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textPENYrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDOLRrate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textQUIDrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPENYrate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textSHILrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textQUIDrate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4sp"
        android:text="@string/loading"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textPENYrate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textTraded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textPENYrate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4sp"
        android:text="@string/loading"
        android:textSize="16sp" />

    <Button
        android:id="@+id/switchtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textSHILrate"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-60dp"
        android:text="@string/switchReceived" />

    <Button
        android:id="@+id/cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchtype"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="65dp"
        android:text="@string/cashCoin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/coinboxDOLR"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/coinboxPENY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/coinboxDOLR"/>

        <ListView
            android:id="@+id/coinboxSHIL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/coinboxPENY"/>

        <ListView
            android:id="@+id/coinboxQUID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/coinboxSHIL"/>
    </RelativeLayout>

</RelativeLayout>